# mineswept

./: .gitignore  README.md  hie.yaml  mineswept.cabal
cmd/mineswept/: Main.hs
cmd/mineswept/Mineswept/: CLI.hs
docs/: roadmap.md
src/Mineswept/: Encoding.hs  Frame.hs  Game.hs  Graph.hs  Grid.hs  Minefield.hs
src/Mineswept/Internal/: PShow.hs
test/Mineswept/: EncodingSpec.hs  FrameSpec.hs  GameSpec.hs  GridSpec.hs  MinefieldSpec.hs
test/Mineswept/Spec/: Util.hs
