cabal-version:      3.0
name:               mineswept
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            Apache-2.0
author:             Leo Zhang
maintainer:         leo@leozhang.me
copyright:          (c) 2021 Leo Zhang
category:           Game
extra-source-files:
  CHANGELOG.md
  README.md

executable mineswept
  main-is:          Main.hs
  build-depends:
    , base                  ^>=4.14.1.0
    , containers            ^>=0.6.4.1
    , MonadRandom           ^>=0.5.3
    , mtl                   ^>=2.2.2
    , optparse-applicative  ^>=0.16.1.0
    , random                ^>=1.2.0
    , random-shuffle        ^>=0.0.4
    , time                  ^>=1.11.1.2

  hs-source-dirs:   cmd/mineswept
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints
