cabal-version:      3.0
name:               mineswept
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            Apache-2.0
author:             Leo Zhang
maintainer:         leo@leozhang.me
copyright:          (c) 2021 Leo Zhang
category:           Game
extra-source-files:
  CHANGELOG.md
  README.md

common lang
  build-depends:      base >=4.12 && <4.15
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DuplicateRecordFields
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    ImportQualifiedPost
    StandaloneKindSignatures

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          lang

  -- cabal-fmt: expand src
  exposed-modules:
    Mineswept.Game
    Mineswept.Grid
    Mineswept.Minefield

  hs-source-dirs:  src
  build-depends:
    , containers           ^>=0.6.4.1
    , grid                 ^>=7.8.14
    , MonadRandom          ^>=0.5.3
    , nonempty-containers  ^>=0.3.4.1
    , random               ^>=1.2.0
    , random-shuffle       ^>=0.0.4
    , time                 ^>=1.11.1.2

executable mineswept
  import:           lang
  main-is:          Main.hs
  build-depends:
    , base       ^>=4.14.1.0
    , mineswept
    , time       ^>=1.11.1.2

  hs-source-dirs:   cmd/mineswept
  default-language: Haskell2010
