cabal-version:      3.0
name:               mineswept
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            Apache-2.0
author:             Leo Zhang
maintainer:         leo@leozhang.me
copyright:          (c) 2021 Leo Zhang
category:           Game
extra-source-files:
  CHANGELOG.md
  README.md

common lang
  build-depends:      base >=4.12 && <4.15
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DuplicateRecordFields
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          lang

  -- cabal-fmt: expand src
  exposed-modules:
    Mineswept.Encoding
    Mineswept.Frame
    Mineswept.Game
    Mineswept.Graph
    Mineswept.Grid
    Mineswept.Internal.PShow
    Mineswept.Minefield

  hs-source-dirs:  src
  build-depends:
    , containers      ^>=0.6.4.1
    , grid            ^>=7.8.14
    , MonadRandom     ^>=0.5.3
    , random-shuffle  ^>=0.0.4
    , text            ^>=1.2.4.1
    , time            ^>=1.11.1.2

test-suite tests
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs

  -- cabal-fmt: expand test -Spec
  other-modules:
    Mineswept.EncodingSpec
    Mineswept.FrameSpec
    Mineswept.GameSpec
    Mineswept.MinefieldSpec

  hs-source-dirs: test
  build-depends:
    , hspec      ^>=2.7.10
    , mineswept
    , text       ^>=1.2.4.1
    , time       ^>=1.11.1.2

executable mineswept
  import:         lang
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/mineswept -Main
  other-modules:  Mineswept.CLI
  hs-source-dirs: cmd/mineswept
  build-depends:
    , base                  ^>=4.14.1.0
    , mineswept
    , optparse-applicative  ^>=0.16.1
    , time                  ^>=1.11.1.2
    , with-utf8             ^>=1.0.2.2
